--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "module-13-challenge-orm",
   "version": "1.0.0",
+  "description": "This application allows the end user enter and save notes on a server deployed web interface. The end user has the ability to enter a new note and save the note. One feature that is currently being established is how to delete specific notes.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,10 +20,10 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
-  },
-  "description": ""
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^5.22.5"
+  }
 }
